--- a/flaskblog/static/main.css
+++ b/flaskblog/static/main.css
@@ -18,54 +18,6 @@ body {
     background-color: #5f788a;
   }
 
-  .search-form{
-    width: 150px;
-    height:150px;
-    margin: -2px 0 0 0;
-    display:flex;
-    justify-content:start;
-    align-items:start;
-    flex-direction:column;
-  }
-
-  .search-form input{
-    width: 200px;
-    height: 35px;
-    border-radius: 0.5em;
-    border:none;
-    padding:10px 20px;
-    text-align:start;
-    margin:0 0 5px 0;
-  }
-
-  .search-form button{
-    border-radius: 0.5em;
-    border:none;
-    background-color:#9055A2;
-    color:#ffffff;
-    padding:5px 15px;
-  }
-
-  .site-header .navbar-nav .nav-link {
-    color:#011638;
-    background-color:#D9D9D9;
-    border-radius:10px;
-    text-align:center;
-    padding:10px 25px;
-    transition: background-color 0.3s;
-    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
-
-  }
-
-  .site-header .navbar-nav .nav-link:hover {
-    background-color: #F5F5F5;
-    color:#2E294E;
-  }
-
-  .site-header .navbar-nav .nav-link.active {
-    font-weight: 500;
-  }
-
   #navbar {
     background-color:#dad5d5;
     width: 100%;
@@ -254,7 +206,7 @@ body {
     background: whitesmoke;
     border: none;
     border-radius: 1em;
-    height:900px;
+    height:1000px;
     }
 
   .content-section:hover{
@@ -361,7 +313,7 @@ body {
     text-align:center;
   }
 
- 
+
 
   .cart{
     display:flex;
@@ -658,6 +610,12 @@ iframe{
   height:250px;
 }
 
+.search-container{
+  display:flex;
+  justify-content:space-between;
+  flex-direction:column;
+}
+
 .search-div {
   display:flex;
   justify-content:center;
@@ -673,6 +631,55 @@ iframe{
   background:none;
   border-radius:0 1em 1em 0;
   text-align:center;
+}
+
+
+.search-form{
+  width: 150px;
+  height:150px;
+  margin: -2px 0 0 0;
+  display:flex;
+  justify-content:start;
+  align-items:start;
+  flex-direction:column;
+}
+
+.search-form input, .category-filter{
+  width: 200px;
+  height: 35px;
+  border-radius: 0.5em;
+  border:none;
+  padding:10px 20px;
+  text-align:start;
+  margin:0 0 5px 0;
+}
+
+.search-form button{
+  border-radius: 0.5em;
+  border:none;
+  background-color:#9055A2;
+  color:#ffffff;
+  padding:5px 15px;
+}
+
+.site-header .navbar-nav .nav-link {
+  color:#011638;
+  background-color:#D9D9D9;
+  border-radius:10px;
+  text-align:center;
+  padding:10px 25px;
+  transition: background-color 0.3s;
+  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
+
+}
+
+.site-header .navbar-nav .nav-link:hover {
+  background-color: #F5F5F5;
+  color:#2E294E;
+}
+
+.site-header .navbar-nav .nav-link.active {
+  font-weight: 500;
 }
 
 .user-post-title{
