--- a/flaskblog/templates/create_post.html
+++ b/flaskblog/templates/create_post.html
@@ -48,6 +48,19 @@
                 {% endif %}
             </div>
             <div class="form-group">
+                {{form.category.label(class="form-control-label")}}
+                {% if form.category.errors %}
+                    {{form.category(class="form-control form-control-lg is-invalid")}}
+                    <div class="invalid-feedback">
+                        {% for error in form.category.errors %}
+                            <span>{{error}}</span>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    {{form.category(class="form-control form-control-lg")}}
+                {% endif %}
+            </div>
+            <div class="form-group">
                 {{ form.image.label(class="form-control-label") }}
                 {{ form.image(class="form-control-file") }}
                 {% if form.image.errors %}
