--- a/flaskblog/templates/post.html
+++ b/flaskblog/templates/post.html
@@ -26,10 +26,13 @@
       </article>
       <article class="media content-section " id='post-content'>
         <div class="post-content">
-          <p class="post-content">{{ posts.content }}</p>
-          <p class="post-price">Charging at only sh. {{ posts.price }}</p>
-          <a href="{{ url_for('add_to_cart', post_id=posts.id) }}" class="btn btn-primary">Add to Cart</a>
-          {% if current_user == posts.author %}
+          {% if current_user != posts.author %}
+            <p class="post-content">{{ posts.content }}</p>
+            <p class="post-price">Charging at only sh. {{ posts.price }}</p>
+            <a href="{{ url_for('add_to_cart', post_id=posts.id) }}" class="btn btn-primary">Add to Cart</a>
+          {% else %}
+            <p class="post-content">{{ posts.content }}</p>
+            <p class="post-price">Charging at only sh. {{ posts.price }}</p>
             <a href="{{ url_for('update_posts', post_id=posts.id) }}"class="btn btn-primary">Edit</a>
             <form action="{{ url_for('delete_post', post_id=posts.id) }}" method="POST" style="display:inline;">
                 <button type="submit" onclick="return confirm('Are you sure you want to delete this post?')" class="btn btn-danger">
