--- a/flaskblog/templates/login.html
+++ b/flaskblog/templates/login.html
@@ -42,7 +42,7 @@
             <div class="form-group">
                 {{form.submit(class="btn btn-outline-info")}}
             </div>
-            <small class="text-muted"><a href="#">Forgot Password</a></small>
+            <small class="text-muted"><a href="{{url_for('reset_request')}}">Forgot Password</a></small>
         </form>
         <div class="pt-4">
             <small class="text-muted">
