--- a/flaskblog/templates/create_post.html
+++ b/flaskblog/templates/create_post.html
@@ -35,6 +35,19 @@
                 </div>
             </fieldset>
             <div class="form-group">
+                {{form.unit.label(class="form-control-label")}}
+                {% if form.unit.errors %}
+                    {{form.unit(class="form-control form-control-lg is-invalid")}}
+                    <div class="invalid-feedback">
+                        {% for error in form.unit.errors %}
+                            <span>{{error}}</span>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    {{form.unit(class="form-control form-control-lg")}}
+                {% endif %}
+            </div>
+            <div class="form-group">
                 {{form.price.label(class="form-control-label")}}
                 {% if form.price.errors %}
                     {{form.price(class="form-control form-control-lg is-invalid")}}
