--- a/flaskblog/static/main.css
+++ b/flaskblog/static/main.css
@@ -76,8 +76,9 @@ body {
     font-weight: 400;
     font-style: normal;
     color: #011638;
-    width:150px;
+    width:100px;
     text-align:center;
+    font-size:12px;
 
   }
 
