--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -55,9 +55,12 @@
                         <a class="nav-item nav-link" href="{{url_for('home')}}">Home</a>
                         <a class="nav-item nav-link" href="{{url_for('about')}}">About</a>
                         {% if current_user.is_authenticated %}
-                        <a class="nav-item nav-link" href="{{url_for('new_post')}}">New Post</a>
-                        <a class="nav-item nav-link" href="{{url_for('logout')}}">Logout</a>
-                        <a class='nav-item nav-link' href="{{url_for('view_cart')}}">My Cart</a>
+                        {% if current_user.is_admin %}
+                            <a class="nav-item nav-link" href="{{ url_for('sales_report') }}">Sales Report</a>
+                        {% endif %}
+                        <a class="nav-item nav-link" href="{{ url_for('new_post') }}">New Post</a>
+                        <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
+                        <a class="nav-item nav-link" href="{{ url_for('view_cart') }}">My Cart</a>
                         <a href="{{ url_for('account') }}">
                             <img src="{{ url_for('static', filename='profile_pics/' + current_user.image_file) }}" alt="Profile" class="rounded-circle account-img">
                         </a>
